# BetMaker

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
conf/kafka/: create-topics.sh  topics
data/: bootstrap.checkpoint  meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
data/__cluster_metadata-0/: leader-epoch-checkpoint
data/events-to-server-0/: partition.metadata
data/events-to-service-0/: partition.metadata
data/events_changes-0/: partition.metadata
migrations/: env.py
migrations/versions/: 00043145c3c9_.py  089ed075daed_.py  8bb92f3b6166_.py  c783aec67cf3_.py
src/: config.py  main.py
src/api/v1/: bet.py  event.py
src/application/: factory.py  manager.py
src/application/controllers/: __init__.py  base.py  bets.py  events.py
src/application/mediators/: kafka.py
src/domain/bet/: schemas.py
src/domain/event/: schemas.py
src/infrastructure/db/: database.py  dbrepo.py  session.py
src/infrastructure/db/models/: __init__.py  bet.py
