[tool.poetry]
name = "betmaker"
version = "0.1.0"
description = ""
authors = ["Anatoly <ad.uglev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.1"
aiokafka = "^0.12.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
